# bbkit

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bbio.rs  cli.yml  config.rs  main.rs  tests.rs
test_data/mod_EIMO_unzip_c_k/scripts/!mods_preload/: mod_EIMO.cnut  mod_EIMO.nut
test_data/mod_EIMO_unzip_c_r/scripts/!mods_preload/: mod_EIMO.nut  mod_EIMO_smart_loot.nut
test_data/mod_EIMO_unzip_c_r_k/scripts/!mods_preload/: mod_EIMO_smart_loot.cnut
