[package]
name = "bbkit"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.11"
walkdir = "2"
dirs-next = "2.0.0"
open = "1"
clap = {version = "~2.33.0", features = ["yaml"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
blake2 = "0.9"
anyhow = "1.0"